minor correction to home-title alignment

--- a/sass/partials/_pages.scss
+++ b/sass/partials/_pages.scss
@@ -1436,7 +1436,7 @@ main {
 .home-title {
   font-family: $font_heading;
   font-size: 2rem;
-  align-self: flex-start;
+  align-self: center;
   grid-column: 1 / -1;
 }
 
